--- a/res/xml/system.xml
+++ b/res/xml/system.xml
@@ -32,6 +32,12 @@
         android:summary="@string/show_cpu_info_summary" 
         android:defaultValue="false" />
 
+    <Preference
+        android:key="screenstate_category" 
+        android:title="@string/screen_state_toggles_title"  
+        android:summary="@string/screen_state_toggles_summary"  
+        android:fragment="com.aosip.owlsnest.advanced.ScreenStateToggles" />
+
     <!-- Flashlight on incoming calls -->
     <ListPreference
         android:key="flashlight_on_call"
