--- a/res/xml/system.xml
+++ b/res/xml/system.xml
@@ -32,6 +32,12 @@
         android:summary="@string/show_cpu_info_summary" 
         android:defaultValue="false" />
 
+    <Preference 
+        android:key="wakelock_blocker" 
+        android:fragment=" com.aosip.owlsnest.advanced.WakeLockBlocker" 
+        android:title="@string/wakelock_blocker_title" 
+        android:summary="@string/wakelock_blocker_summary" />
+
     <Preference
         android:key="screenstate_category" 
         android:title="@string/screen_state_toggles_title"  
