--- a/res/xml/screen_state_toggles.xml
+++ b/res/xml/screen_state_toggles.xml
@@ -25,7 +25,7 @@
         android:summary="@string/screen_state_toggles_enable_summary"
         android:defaultValue="false"/>
 
-    <com.aosip.owlsnest.preference.CustomSeekBarPreference
+    <com.aosip.support.preference.CustomSeekBarPreference
         android:key="screen_state_off_delay"
         android:title="@string/screen_state_off_delay_title"
         android:summary="@string/screen_state_off_delay_summary"
@@ -35,7 +35,7 @@
         android:persistent="false"
         android:dependency="screen_state_toggles_enable_key" />
 
-    <com.aosip.owlsnest.preference.CustomSeekBarPreference
+    <com.aosip.support.preference.CustomSeekBarPreference
         android:key="screen_state_on_delay"
         android:title="@string/screen_state_on_delay_title"
         android:summary="@string/screen_state_on_delay_summary"
@@ -49,19 +49,19 @@
         android:key="screen_state_toggles_mobile_key"
         android:title="@string/screen_state_toggles_mobile_title">
 
-       <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
+       <com.aosip.support.preference.SystemSettingSwitchPreference
             android:key="screen_state_toggles_twog"
             android:title="@string/screen_state_toggles_twog"
             android:summary="@string/screen_state_toggles_twog_summary"
             android:defaultValue="false"/>
 			
-       <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
+       <com.aosip.support.preference.SystemSettingSwitchPreference
             android:key="screen_state_toggles_threeg"
             android:title="@string/screen_state_toggles_threeg"
             android:summary="@string/screen_state_toggles_threeg_summary"
             android:defaultValue="false"/>
 
-       <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
+       <com.aosip.support.preference.SystemSettingSwitchPreference
             android:key="screen_state_toggles_mobile_data"
             android:title="@string/screen_state_toggles_mobile_data"
             android:summary="@string/screen_state_toggles_mobile_data_summary"
@@ -72,7 +72,7 @@
         android:key="screen_state_toggles_location_key"
         android:title="@string/screen_state_toggles_location_title">
 
-       <com.aosip.owlsnest.preference.SystemSettingSwitchPreference
+       <com.aosip.support.preference.SystemSettingSwitchPreference
             android:key="screen_state_toggles_gps"
             android:title="@string/screen_state_toggles_gps"
             android:summary="@string/screen_state_toggles_gps_summary"
